--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <main>
         <!-- banner code starts here  -->
         <section class="hero">
-            <img src="Images/amazing-strong-young-sports-woman-stretching.jpg" alt="Hero Banner" class="banner-img">
+            <img src="Images/hero.png" alt="Hero Banner" class="banner-img">
             <!-- <img src="Images/amazing-strong-young-sports-woman-stretching.jpg" alt="Banner Image 1" class="banner-img"> -->
             <div class="hero-text">
                 <h1>Welcome to ZiddiShark</h1>
