--- a/blog.html
+++ b/blog.html
@@ -46,7 +46,7 @@
                 <div class="blog-grid">
                     <!-- Example Blog Post -->
                     <div class="blog-card">
-                        <img src="images/plank-is-good-abdomen-exercise.jpg" alt="Fitness Journey with HIIT">
+                        <img src="Images/plank-is-good-abdomen-exercise.jpg" alt="Fitness Journey with HIIT">
                         <div class="text-content">
                             <h3>Fitness Journey with HIIT</h3>
                             <p><strong>By : Jane Doe</strong></p>
@@ -57,7 +57,7 @@
                         </div>
                     </div>
                     <div class="blog-card">
-                        <img src="images/woman-hands-water.jpg" alt="Why Yoga Changed My Life">
+                        <img src="Images/woman-hands-water.jpg" alt="Why Yoga Changed My Life">
                         <div class="text-content">
                             <h3>Why Yoga Changed My Life</h3>
                             <p><strong>By : John Smith</strong></p>
@@ -68,7 +68,8 @@
                         </div>
                     </div>
                     <div class="blog-card">
-                        <img src="images/side-view-athletic-woman-stretching-by-beach.jpg" alt="The Benefits of Strength Training">
+                        <img src="Images/side-view-athletic-woman-stretching-by-beach.jpg"
+                            alt="The Benefits of Strength Training">
                         <div class="text-content">
                             <h3>The Benefits of Strength Training</h3>
                             <p><strong>By : Emily Davis</strong></p>
@@ -78,7 +79,8 @@
                         </div>
                     </div>
                     <div class="blog-card">
-                        <img src="images/amazing-strong-young-sports-woman-stretching.jpg" alt="Top 5 Exercises to Boost Your Strength">
+                        <img src="Images/amazing-strong-young-sports-woman-stretching.jpg"
+                            alt="Top 5 Exercises to Boost Your Strength">
                         <div class="text-content">
                             <h3>Top 5 Exercises to Boost Your Strength</h3>
                             <p><strong>By :Alex Johnson</strong></p>
@@ -88,7 +90,7 @@
                         </div>
                     </div>
                     <div class="blog-card">
-                        <img src="images/women-with-healthy-food-medium-shot.jpg" alt="The Importance of Nutrition">
+                        <img src="Images/women-with-healthy-food-medium-shot.jpg" alt="The Importance of Nutrition">
                         <div class="text-content">
                             <h3>The Importance of Nutrition in Your Fitness Journey</h3>
                             <p><strong>By : Jamie Lee</strong></p>
@@ -98,7 +100,7 @@
                         </div>
                     </div>
                     <div class="blog-card">
-                        <img src="images/fitness-body-builder-challenge.jpg" alt="Effective Workout Plan">
+                        <img src="Images/fitness-body-builder-challenge.jpg" alt="Effective Workout Plan">
                         <div class="text-content">
                             <h3>How to Create an Effective Workout Plan for Beginners</h3>
                             <p><strong>By : Chris Davis</strong></p>
@@ -125,7 +127,7 @@
             <a href="#" class="page-number">10</a>
             <a href="#" class="arrow next">&raquo;</a>
         </div>
-        
+
     </main>
     <footer class="mt-30">
         <div class="footer-content">
