--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <h2>Elevate your fitness </h2>
                 <div class="program-grid">
                     <div class="program-card">
-                        <img src="images/man-jeans-lifting-barbell.jpg" alt="Body Building">
+                        <img src="Images/man-jeans-lifting-barbell.jpg" alt="Body Building">
                         <div class="text-content">
                             <h3>Body Building</h3>
                             <p>Transform your physique with our specialized
@@ -75,7 +75,7 @@
 
                     </div>
                     <div class="program-card">
-                        <img src="images/aerobics.png" alt="Aerobics">
+                        <img src="Images/aerobics.png" alt="Aerobics">
                         <div class="text-content">
                             <h3> Aerobics</h3>
                             <p> Elevate your fitness with our high-energy
@@ -87,7 +87,7 @@
 
                     </div>
                     <div class="program-card">
-                        <img src="images/cycling.jpg" alt="Cycling">
+                        <img src="Images/cycling.jpg" alt="Cycling">
                         <div class="text-content">
                             <h3>Cycling</h3>
                             <p> Feel free to adjust the wording if you want to
@@ -153,22 +153,22 @@
                 <h2>Top Coaches</h2>
                 <div class="coaches-grid">
                     <div class="coach-card">
-                        <img src="images/jane.jpg" alt="Coach Jane Doe">
+                        <img src="Images/jane.jpg" alt="Coach Jane Doe">
                         <h3>Coach Jane Doe</h3>
                         <p>Expert in Strength Training</p>
                     </div>
                     <div class="coach-card">
-                        <img src="images/joe.jpg" alt="Coach John Smith">
+                        <img src="Images/joe.jpg" alt="Coach John Smith">
                         <h3>Coach John Smith</h3>
                         <p>Specialist in Cardio Workouts</p>
                     </div>
                     <div class="coach-card">
-                        <img src="images/fit_woman_doing_dumbbell_workout.webp" alt="Coach Emily Davis">
+                        <img src="Images/fit_woman_doing_dumbbell_workout.webp" alt="Coach Emily Davis">
                         <h3>Coach Emily Davis</h3>
                         <p>Yoga and Flexibility Expert</p>
                     </div>
                     <div class="coach-card">
-                        <img src="images/rivera.png" alt="Coach Michael Lee">
+                        <img src="Images/rivera.png" alt="Coach Michael Lee">
                         <h3>Coach Michael Lee</h3>
                         <p>Nutrition and Wellness Coach</p>
                     </div>
@@ -214,7 +214,7 @@
                         </div>
                     </section>
                     <div class="contact-image">
-                        <img src="images/yoga-session.jpg" alt="Yoga session image">
+                        <img src="Images/yoga-session.jpg" alt="Yoga session image">
                     </div>
                 </div>
             </section>
