--- a/services.html
+++ b/services.html
@@ -1,49 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-    <!--Shakila-->
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>ZIDDISHARK</title>
-        <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    </head>
-    <body>
-        <header>
-            <div class="logo">
-                <a href="index.html">
-                    <img src="Images/ZIDDISHARK.png" alt="logo">
-                </a>
-            </div>
-            <nav>
-                <ul>
-                    <li>
-                        <a href="index.html">Home</a>
-                    </li>
-                    <li>
-                        <a href="about.html">About Us</a>
-                    </li>
-                    <li>
-                        <a href="blog.html">Blogs</a>
-                    </li>
-                    <li>
-                        <a href="services.html">Services</a>
-                    </li>
-                    <li>
-                        <a href="contact.html">Contact</a>
-                    </li>
-                </ul>
-            </nav>
-        </header>
-        <main>
-            <!-- banner code starts here  -->
+<!--Shakila-->
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ZIDDISHARK</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+
+<body>
+    <header>
+        <div class="logo">
+            <a href="index.html">
+                <img src="Images/ZIDDISHARK.png" alt="logo">
+            </a>
+        </div>
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="about.html">About Us</a>
+                </li>
+                <li>
+                    <a href="blog.html">Blogs</a>
+                </li>
+                <li>
+                    <a href="services.html">Services</a>
+                </li>
+                <li>
+                    <a href="contact.html">Contact</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <!-- banner code starts here  -->
         <section class="hero">
             <img src="Images/side-view-athletic-woman-stretching-by-beach.jpg" alt="Hero image">
             <div class="hero-text">
                 <h2>Services</h2>
                 <p>
-                    We provide various services such as personal trainer, cardio sessions, Strength training programs and
-                more!!
+                    We provide various services such as personal trainer, cardio sessions, Strength training programs
+                    and
+                    more!!
                 </p>
                 <a> Learn More</a>
             </div>
@@ -53,7 +56,7 @@
             <h2>SERVICES WE PROVIDE</h2>
             <div class="program-grid">
                 <div class="program-card">
-                    <img src="images/personal trainer.jpg" alt="Personal Training">
+                    <img src="Images/personal trainer.jpg" alt="Personal Training">
                     <div class="text-content">
                         <h3>Personal Training</h3>
                         <p>We provide personal training tailored to your liking and needs! Join us now!</p>
@@ -62,24 +65,25 @@
                     </div>
                 </div>
                 <div class="program-card">
-                    <img src="images/powerlifting.jpg" alt="Powerlifting program">
+                    <img src="Images/powerlifting.jpg" alt="Powerlifting program">
                     <div class="text-content">
                         <h3>Powerlifting program</h3>
                         <p>
-                            For dedicated powerlifters we have created a program for the top 3 lifts! Join us today to reach
-                        your PR!
+                            For dedicated powerlifters we have created a program for the top 3 lifts! Join us today to
+                            reach
+                            your PR!
                         </p>
                         <p></p>
                         <a href="#"> Find More</a>
                     </div>
                 </div>
                 <div class="program-card">
-                    <img src="images/cardio.jpg" alt="Cardio program">
+                    <img src="Images/cardio.jpg" alt="Cardio program">
                     <div class="text-content">
                         <h3>Cardio program</h3>
                         <p>
                             Feel free to adjust the wording if you want to
-                        match your specific style or add more details!
+                            match your specific style or add more details!
                         </p>
                         <p></p>
                         <a href="#"> Find More</a>
@@ -91,11 +95,13 @@
             <h2>Why Use Our Services?</h2>
             <div class="why-us-content">
                 <p>
-                    Choosing our services means investing in a healthier, fitter you. With personalized training programs,
-                expert guidance, and a supportive community, we are dedicated to helping you achieve your fitness goals.
-                Our services are designed to be flexible, catering to all fitness levels, and offering a range of
-                classes and personal training sessions to suit your needs. Join us and take the first step towards
-                transforming your life today!
+                    Choosing our services means investing in a healthier, fitter you. With personalized training
+                    programs,
+                    expert guidance, and a supportive community, we are dedicated to helping you achieve your fitness
+                    goals.
+                    Our services are designed to be flexible, catering to all fitness levels, and offering a range of
+                    classes and personal training sessions to suit your needs. Join us and take the first step towards
+                    transforming your life today!
                 </p>
                 <img src="Images/why_us.jpg" alt="Man deadlifting">
             </div>
@@ -105,22 +111,22 @@
             <h2>Top Coaches</h2>
             <div class="coaches-grid">
                 <div class="coach-card">
-                    <img src="images/jane.jpg" alt="Coach Jane Doe">
+                    <img src="Images/jane.jpg" alt="Coach Jane Doe">
                     <h3>Coach Jane Doe</h3>
                     <p>Expert in Strength Training</p>
                 </div>
                 <div class="coach-card">
-                    <img src="images/joe.jpg" alt="Coach John Smith">
+                    <img src="Images/joe.jpg" alt="Coach John Smith">
                     <h3>Coach John Smith</h3>
                     <p>Specialist in Cardio Workouts</p>
                 </div>
                 <div class="coach-card">
-                    <img src="images/fit_woman_doing_dumbbell_workout.webp" alt="Coach Emily Davis">
+                    <img src="Images/fit_woman_doing_dumbbell_workout.webp" alt="Coach Emily Davis">
                     <h3>Coach Emily Davis</h3>
                     <p>Yoga and Flexibility Expert</p>
                 </div>
                 <div class="coach-card">
-                    <img src="images/rivera.png" alt="Coach Michael Lee">
+                    <img src="Images/rivera.png" alt="Coach Michael Lee">
                     <h3>Coach Michael Lee</h3>
                     <p>Nutrition and Wellness Coach</p>
                 </div>
@@ -134,13 +140,7 @@
                     <form action="#" method="post">
                         <div class="form-group">
                             <div class="input-group">
-                                <input
-                                    type="text"
-                                    id="name"
-                                    name="name"
-                                    placeholder="Your Name"
-                                    required
-                                >
+                                <input type="text" id="name" name="name" placeholder="Your Name" required>
                                 <span class="input-icon">
                                     <i class="fa fa-user"></i>
                                 </span>
@@ -148,13 +148,7 @@
                         </div>
                         <div class="form-group">
                             <div class="input-group">
-                                <input
-                                    type="email"
-                                    id="email"
-                                    name="email"
-                                    placeholder="Your Email"
-                                    required
-                                >
+                                <input type="email" id="email" name="email" placeholder="Your Email" required>
                                 <span class="input-icon">
                                     <i class="fa fa-envelope"></i>
                                 </span>
@@ -162,13 +156,8 @@
                         </div>
                         <div class="form-group">
                             <div class="input-group">
-                                <textarea
-                                    id="message"
-                                    name="message"
-                                    placeholder="Your Message"
-                                    rows="4"
-                                    required
-                                ></textarea>
+                                <textarea id="message" name="message" placeholder="Your Message" rows="4"
+                                    required></textarea>
                                 <span class="input-icon">
                                     <i class="fa fa-pencil"></i>
                                 </span>
@@ -178,13 +167,13 @@
                     </form>
                 </div>
                 <div class="contact-image">
-                    <img src="images/yoga-session.jpg" alt="yoga session image">
+                    <img src="Images/yoga-session.jpg" alt="yoga session image">
                 </div>
             </div>
         </section>
-        </main>
-        
-   
+    </main>
+
+
     <footer class="mt-30">
         <div class="footer-content">
             <div class="footer-first">
@@ -270,4 +259,5 @@
         </div>
     </footer>
 </body>
+
 </html>
