--- a/contact.html
+++ b/contact.html
@@ -29,80 +29,80 @@
     </header>
 
     <main>
-         <!-- banner code starts here  -->
-    <section class="hero">
-        <img src="images/hero.png" alt="Hero Banner">
-        <div class="hero-text">
-            <h2>Contact Us</h2>
-            <p>Buy any products on store® bonus points offer to be entered
-                for a chance to win one of 9 weekly grand prizes. Terms and
-                conditions apply.*</p>
-            <a> Learn More</a>
-        </div>
-    </section>
-
-
-    <section class="contact-wrapper">
-        <div class="contact-box india-contact">
-            <img src="Images/india.png" alt="Location india" class="contact-country">
-            <h3>India</h3>
-            <p>103, Warner Lane, Kerala, India  </p>
-        </div>
-        <div class="contact-box uk-contact">
-            <img src="Images/UK.png" alt="Location UK" class="contact-country">
-            <h3>UK</h3>
-            <p>456 Second Street, City, Back Piccadilly, United Kingdom </p>
-        </div>
-        <div class="contact-box us-contact">
-            <img src="Images/usa.png" alt="Location USA" class="contact-country">
-            <h3>USA</h3>
-            <p>789 Third Street, Clovis, USA</p>
-        </div>
-    </section>
-
-    <div class="container">
-        <!-- Contact Us -->
-        <section class="contact-us">
-            <div class="contact-container">
-                <div class="contact-form">
-                    <h2>Contact Us</h2>
-                    <form action="#" method="post">
-                        <div class="form-group">
-                            <div class="input-group">
-                                <input type="text" id="name" name="name" placeholder="Your Name" required>
-                                <span class="input-icon"><i class="fa fa-user"></i></span>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="input-group">
-                                <input type="email" id="email" name="email" placeholder="Your Email" required>
-                                <span class="input-icon"><i class="fa fa-envelope"></i></span>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="input-group">
-                                <textarea id="message" name="message" placeholder="Your Message" rows="4"
-                                    required></textarea>
-                                <span class="input-icon"><i class="fa fa-pencil"></i></span>
-                            </div>
-                        </div>
-                        <button type="submit" class="submit-btn">Send Message</button>
-                    </form>
-                </div>
-                <div class="contact-image">
-                    <img src="images/yoga-session.jpg" alt="Gym">
-                </div>
+        <!-- banner code starts here  -->
+        <section class="hero">
+            <img src="Images/hero.png" alt="Hero Banner">
+            <div class="hero-text">
+                <h2>Contact Us</h2>
+                <p>Buy any products on store® bonus points offer to be entered
+                    for a chance to win one of 9 weekly grand prizes. Terms and
+                    conditions apply.*</p>
+                <a> Learn More</a>
             </div>
         </section>
 
 
+        <section class="contact-wrapper">
+            <div class="contact-box india-contact">
+                <img src="Images/india.png" alt="Location india" class="contact-country">
+                <h3>India</h3>
+                <p>103, Warner Lane, Kerala, India </p>
+            </div>
+            <div class="contact-box uk-contact">
+                <img src="Images/UK.png" alt="Location UK" class="contact-country">
+                <h3>UK</h3>
+                <p>456 Second Street, City, Back Piccadilly, United Kingdom </p>
+            </div>
+            <div class="contact-box us-contact">
+                <img src="Images/usa.png" alt="Location USA" class="contact-country">
+                <h3>USA</h3>
+                <p>789 Third Street, Clovis, USA</p>
+            </div>
+        </section>
+
+        <div class="container">
+            <!-- Contact Us -->
+            <section class="contact-us">
+                <div class="contact-container">
+                    <div class="contact-form">
+                        <h2>Contact Us</h2>
+                        <form action="#" method="post">
+                            <div class="form-group">
+                                <div class="input-group">
+                                    <input type="text" id="name" name="name" placeholder="Your Name" required>
+                                    <span class="input-icon"><i class="fa fa-user"></i></span>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="input-group">
+                                    <input type="email" id="email" name="email" placeholder="Your Email" required>
+                                    <span class="input-icon"><i class="fa fa-envelope"></i></span>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="input-group">
+                                    <textarea id="message" name="message" placeholder="Your Message" rows="4"
+                                        required></textarea>
+                                    <span class="input-icon"><i class="fa fa-pencil"></i></span>
+                                </div>
+                            </div>
+                            <button type="submit" class="submit-btn">Send Message</button>
+                        </form>
+                    </div>
+                    <div class="contact-image">
+                        <img src="Images/yoga-session.jpg" alt="Gym">
+                    </div>
+                </div>
+            </section>
 
 
 
-    </div>
+
+
+        </div>
     </main>
 
-   
+
 
     <footer class="mt-30">
         <div class="footer-content">
